# spes

./: .gitignore  Cargo.toml  README.md  index.html  pre-commit  shell.nix
libplen/: Cargo.toml
libplen/src/: constants.rs  gamestate.rs  lib.rs  math.rs  messages.rs  physics.rs  player.rs
resources/: cannon1.kra
resources/ship/: laser.kra  shield.kra  thrusters.kra
src/: assets.rs  client.rs  client_state.rs  map.rs  menu.rs  rendering.rs  server.rs
src/shaders/: stars.frag  stars.vert
