[package]
name = "plen"
version = "0.1.0"
authors = ["Emil Segerbäck", "Hannes Tuhkala", "Malcolm Wigren", "Frans Skarman", "Robin Sliwa"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3"
bincode = "1.2.1"
rand = "0.8.5"
rand_derive = "0.5.0"
whoami = "0.6.0"
libplen = {path="libplen"}
unicode-truncate = "0.1.1"
enum-map = "0.6.2"
egui-macroquad = "0.12.0"
image = "0.24.5"
egui_extras = "0.19"
color-eyre = "0.6.2"
rapier2d = {version="0.17.1", features=["simd-stable"]}

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
