[package]
name = "plen"
version = "0.1.0"
authors = ["Emil Segerbäck", "Hannes Tuhkala", "Malcolm Wigren", "Frans Skarman", "Robin Sliwa"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3"
postcard = {version="1.0", features=["use-std"]}
libplen = {path="libplen"}
unicode-truncate = "0.1.1"
enum-map = "0.6.2"
egui-macroquad = "0.12.0"
image = {version="0.24.5", default-features=false, features=["png"]}
egui_extras = "0.19"
anyhow = {version="1.0.68", default-features=false}
rapier2d = {version="0.17.1", features=["simd-stable"]}
quad-net = "0.1.1"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
